yaml/ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-deployment1
  name: service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-deployment1
  type: ClusterIP
status:
  loadBalancer: {}
